tests/golden/errors/bytes_fromhex_invalid.py
bytes.fromhex("12xz")
